# 158_assignment2

./: README.md  presentation_outline.md  pyproject.toml  video_url.txt  workbook.html
data/processed/: wine_features.parquet
notebooks/: assignment2.ipynb  assignment2_2.ipynb  baseline.ipynb
src/goob_ai/: __init__.py  config.py  data.py  evaluation.py  modeling.py  pipeline.py  visualization.py
tests/: test_pipeline.py
